--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "CRUD OPERATIONS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node index.js",
+    "dev": "nodemon index,js",
+    "test": "echo \"Error: no test specified\" && exit 1"  
+},
   "author": "SHAIK IMTIAZ ALI",
   "license": "ISC",
   "dependencies": {
